--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@mui/system": "^5.15.15",
     "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^5.17.0",
@@ -26,6 +24,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "redux-thunk": "^3.1.0",
     "sass": "^1.76.0",
     "swiper": "^11.1.1",
     "web-vitals": "^2.1.4"
