--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-scripts": "5.0.1",
     "redux-thunk": "^3.1.0",
     "sass": "^1.76.0",
+    "sweetalert2": "^11.11.1",
     "swiper": "^11.1.1",
     "web-vitals": "^2.1.4"
   },
