--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mediapipe/tasks-vision": "^0.10.14",
     "@mui/system": "^5.15.15",
+    "@react-three/drei": "^9.106.0",
+    "@react-three/fiber": "^8.16.8",
     "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "axios": "^1.6.8",
     "country-state-city": "^3.2.1",
     "dotenv": "^16.4.5",
@@ -28,6 +32,7 @@
     "sass": "^1.76.0",
     "sweetalert2": "^11.11.1",
     "swiper": "^11.1.1",
+    "three": "^0.165.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
