--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-material-ui-carousel": "^3.4.2",
     "react-otp-input": "^3.1.1",
     "react-redux": "^9.1.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "redux-thunk": "^3.1.0",
