--- a/client/package.json
+++ b/client/package.json
@@ -23,14 +23,18 @@
     "react-hook-form": "^7.51.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-image-lightbox": "^5.1.4",
     "react-material-ui-carousel": "^3.4.2",
+    "react-modal-image": "^2.6.0",
     "react-otp-input": "^3.1.1",
     "react-redux": "^9.1.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "redux-thunk": "^3.1.0",
     "sass": "^1.76.0",
+    "sweetalert": "^2.1.2",
     "sweetalert2": "^11.11.1",
     "swiper": "^11.1.1",
     "three": "^0.165.0",
