--- a/client/package.json
+++ b/client/package.json
@@ -17,16 +17,16 @@
     "dotenv": "^16.4.5",
     "install": "^0.13.0",
     "npm": "^10.7.0",
+    "photoswipe": "^5.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.51.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
-    "react-image-lightbox": "^5.1.4",
     "react-material-ui-carousel": "^3.4.2",
-    "react-modal-image": "^2.6.0",
     "react-otp-input": "^3.1.1",
+    "react-photoswipe-gallery": "^3.0.1",
     "react-redux": "^9.1.0",
     "react-responsive-carousel": "^3.2.23",
     "react-responsive-modal": "^6.4.2",
