--- a/server/package.json
+++ b/server/package.json
@@ -37,6 +37,7 @@
     "nodemailer": "^6.9.12",
     "otp-generator": "^4.0.1",
     "path": "^0.12.7",
+    "pdfkit": "^0.15.0",
     "razorpay": "^2.9.4",
     "sharp": "^0.33.3",
     "slugify": "^1.6.6",
