--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "npm": "^10.5.0"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.0.3",
