--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dummy",
+  "name": "absence",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,8 +17,7 @@
     "dotenv": "^16.4.5",
     "install": "^0.13.0",
     "npm": "^10.7.0",
-    "photoswipe": "^5.4.4",
-    "react": "^18.2.0",
+      "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.51.1",
@@ -26,16 +25,11 @@
     "react-icons": "^5.0.1",
     "react-material-ui-carousel": "^3.4.2",
     "react-otp-input": "^3.1.1",
-    "react-photoswipe-gallery": "^3.0.1",
     "react-redux": "^9.1.0",
-    "react-responsive-carousel": "^3.2.23",
-    "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
-    "redux-thunk": "^3.1.0",
     "sass": "^1.76.0",
-    "sweetalert": "^2.1.2",
-    "sweetalert2": "^11.11.1",
+     "sweetalert2": "^11.11.1",
     "swiper": "^11.1.1",
     "three": "^0.165.0",
     "web-vitals": "^2.1.4"
