--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "sass": "^1.76.0",
+    "sweetalert": "^2.1.2",
      "sweetalert2": "^11.11.1",
     "swiper": "^11.1.1",
     "three": "^0.165.0",
