--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vercel/analytics": "^1.3.1",
     "aos": "^2.3.4",
     "axios": "^1.6.8",
     "country-state-city": "^3.2.1",
     "dotenv": "^16.4.5",
     "install": "^0.13.0",
     "npm": "^10.7.0",
-      "react": "^18.2.0",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.51.1",
@@ -30,7 +31,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.76.0",
     "sweetalert": "^2.1.2",
-     "sweetalert2": "^11.11.1",
+    "sweetalert2": "^11.11.1",
     "swiper": "^11.1.1",
     "three": "^0.165.0",
     "web-vitals": "^2.1.4"
