--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,10 @@
     "axios": "^1.6.8",
     "country-state-city": "^3.2.1",
     "dotenv": "^16.4.5",
+    "fs": "^0.0.1-security",
     "install": "^0.13.0",
     "npm": "^10.7.0",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
@@ -31,6 +33,8 @@
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "sass": "^1.76.0",
+    "sitemap": "^8.0.0",
+    "stream": "^0.0.3",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.11.1",
     "swiper": "^11.1.1",
@@ -40,6 +44,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "postbuild": "node generate-sitemap.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
