--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "npm": "^10.7.0",
     "path": "^0.12.7",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.6",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
