--- a/admin/.env
+++ b/admin/.env
@@ -1,3 +1,3 @@
-# REACT_APP_BASE_URL=http://localhost:4000/api/v1
-REACT_APP_BASE_URL=https://e-commerce-with-mahi-vt9j.onrender.com/api/v1
+REACT_APP_BASE_URL=http://localhost:4000/api/v1
+# REACT_APP_BASE_URL=https://e-commerce-with-mahi-vt9j.onrender.com/api/v1
 PORT=3001
